--- a/apps/frontend/src/app/modules/information/components/sidebar/sidebar.component.scss
+++ b/apps/frontend/src/app/modules/information/components/sidebar/sidebar.component.scss
@@ -52,7 +52,7 @@
       }
       margin-bottom: 5px;
       border-bottom: 1px solid #d2d2d2;
-      opacity: 0.45;
+      opacity: 0.55;
 
       @media screen and (max-width: 992px) {
         width: 100%;
