--- a/apps/frontend/src/app/modules/shared/components/card/card.component.scss
+++ b/apps/frontend/src/app/modules/shared/components/card/card.component.scss
@@ -81,7 +81,7 @@
       vertical-align: middle;
       margin-right: 20px;
       font-size: 1.2rem;
-      color: #5e5e5e;
+      color: #000;
       z-index: 1;
       position: relative;
     }
